corrected month picker overlay spacing from button

--- a/src/components/MonthPicker.scss
+++ b/src/components/MonthPicker.scss
@@ -2,7 +2,7 @@
 
 .month-picker {
   position: absolute;
-  top: 20px;
+  top: 22px;
   right: -12px;
   z-index: 10;
   max-width: unset;
